<resources>
    <string name="app_name">MaaFood</string>
    <string-array name="category">
        <item>Inquiry</item>
        <item>Feedback</item>
        <item>Other</item>
    </string-array>

    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_registered">Already Registered ? Login</string>
    <string name="not_registered">Dont have account? Sign Up</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="home">Home</string>
    <string name="cravings">Cravings</string>
    <string name="planner">Planner</string>
    <string name="my_kitchen">My Kitchen</string>
    <string name="activity">Activity</string>
    <string name="my_profile">My Profile</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="dish_name">Dish Name</string>
    <string name="desc">Description</string>
    <string name="min_serve">Minimum Serving</string>
    <string name="max_serve">Maximum Serving</string>
    <string name="est_cost">Estimated Cost</string>
    <string name="specs">Specifications</string>
    <string name="dishes">Available Dishes</string>
    <string name="orders">Available Orders</string>
    <string name="order">Add Order</string>
    <string name="dish">Add Dish</string>
    <string name="loading">Loading…</string>
    <string name="upload_paused">Upload is paused</string>
    <string name="upload_resume">Upload resumed</string>

</resources>
