<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <group
        android:id="@+id/Group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/icon_home"
            />
        <item
            android:id="@+id/cravings"
            android:title="@string/cravings"
            android:icon="@drawable/icon_cravings"
            />
        <item
            android:id="@+id/Planner"
            android:title="@string/planner"
            android:icon="@drawable/icon_planner"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/MyProfile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"/>
        <item
            android:id="@+id/inviteFriends"
            android:title="@string/invite_friends"
            android:icon="@drawable/ic_share_black_24dp"/>
        <item
            android:id="@+id/Help"
            android:title="@string/help"
            android:icon="@drawable/icon_help"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/icon_logout"
            />
    </group>
</menu>