<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDish">

    <ImageView
        android:id="@+id/dish_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/maafood"
         />

    <ProgressBar
        android:id="@+id/progbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="373dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/DishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dish_image"
        android:layout_margin="12dp"
        android:hint="@string/dish_name" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DishName"
        android:layout_margin="12dp"
        android:hint="@string/desc" />

    <EditText
        android:id="@+id/min_serving"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/min_serve" />

    <EditText
        android:id="@+id/max_serving"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_margin="12dp"
        android:layout_toRightOf="@+id/min_serving"

        android:hint="@string/max_serve" />

    <EditText
        android:id="@+id/EstimatedCoast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/max_serving"
        android:layout_margin="12dp"
        android:hint="@string/est_cost" />


    <Spinner
        android:id="@+id/specifics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/specs"
        android:layout_below="@+id/EstimatedCoast"
        android:choiceMode="multipleChoice"/>

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specifics"
        android:layout_centerHorizontal="true"
        android:text="Post" />


</RelativeLayout>